[gd_scene load_steps=5 format=3 uid="uid://d1bi50ip5avwu"]

[ext_resource type="Script" uid="uid://bchym2iswmrbc" path="res://scripts/ready.gd" id="1_r4kvu"]
[ext_resource type="Texture2D" uid="uid://b0ql2ev8rwexh" path="res://assests_g/Dark Fantasy Forest.jpg" id="2_r4kvu"]
[ext_resource type="Texture2D" uid="uid://ckfodvekxf650" path="res://assests_g/firefly.jpeg" id="3_r4kvu"]
[ext_resource type="FontFile" uid="uid://c00m3gnr1qm1v" path="res://fonts/space-nova-font/SpaceNova-6Rpd1.otf" id="4_oqece"]

[node name="Ready" type="Node2D"]
script = ExtResource("1_r4kvu")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(-3, 1)
scale = Vector2(2.31806, 1.21289)
texture = ExtResource("2_r4kvu")
centered = false

[node name="fly" type="Sprite2D" parent="."]
position = Vector2(348, 207)
scale = Vector2(0.199219, 0.15625)
texture = ExtResource("3_r4kvu")
flip_h = true

[node name="timerLabel" type="Label" parent="."]
offset_left = 283.0
offset_top = 56.0
offset_right = 415.0
offset_bottom = 153.0
theme_override_fonts/font = ExtResource("4_oqece")
theme_override_font_sizes/font_size = 61
text = "3"
horizontal_alignment = 1

[node name="ReadyTimer" type="Timer" parent="."]
autostart = true

[node name="TimerAudio" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="ReadyTimer" to="." method="_on_ready_timer_timeout"]
